# array-print

./: .gitignore  README.md  array-print-pandas.ipynb  pyproject.toml  requirements.txt  template.ipynb
array_print/: __init__.py  cli.py  utils.py  viz.py
