[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "array-print"
version = "0.1.0"
description = "A Python package for generating Scienion-compatible array print files from MITOMI-assayable libraries"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Micah Olivas", email = "mbolivas@stanford.edu"}
]
keywords = ["scienion", "array", "print", "mitomi", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.3",
    "pandas>=1.3.2",
    "matplotlib>=3.4.2",
    "seaborn>=0.11.0",
    "adjustText>=1.1.1",
    "textalloc>=0.0.4"
]

[project.optional-dependencies]
jupyter = [
    "ipyfilechooser>=0.6.0",
    "jupyter>=1.0.0"
]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/micaholivas/Array-Print"
Repository = "https://github.com/micaholivas/Array-Print.git"
Issues = "https://github.com/micaholivas/Array-Print/issues"

[tool.setuptools]
packages = ["array_print"]

[tool.setuptools.package-dir]
array_print = "array_print"